--- a/src/app/components/board/board.component.html
+++ b/src/app/components/board/board.component.html
@@ -1,3 +1,5 @@
+<!-- All Tasks Board -->
+
 <div class="flex flex-col lg:flex-row lg:space-x-4 space-y-4 lg:space-y-0 sm:px-0 mb-4">
   <!-- To Do Column -->
   <div class="w-full lg:w-1/3">
