--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,3 +1,5 @@
+<!-- Task Card Component -->
+ 
 <div class="mb-3 cursor-drag active:cursor-grabbing select-none" cdkDrag (click)="details()">
   <div class="w-full p-3 bg-white shadow-sm rounded-xl dark:bg-gray-700">
     <div class="flex items-center justify-between mb-6">
