--- a/src/app/components/statistics/statistics.component.html
+++ b/src/app/components/statistics/statistics.component.html
@@ -1,3 +1,5 @@
+<!-- Task Statistics Page -->
+ 
 <div class="pt-20 px-4 xl:px-6 pb-4 xl:pt-4 bg-gray-100 dark:bg-gray-800 h-screen overflow-scroll">
   <h2 class="text-2xl font-bold mb-4 text-primary">Task Statistics</h2>
 
