--- a/src/app/components/add-task/add-task.component.html
+++ b/src/app/components/add-task/add-task.component.html
@@ -1,3 +1,5 @@
+<!-- Add New Task Modal -->
+
 <div class="fixed inset-0 z-50 p-2 sm:p-0 flex items-center justify-center bg-black bg-opacity-50">
   <div class="bg-white rounded-lg shadow-lg p-6 w-full max-w-lg">
     <h3 class="text-xl text-secondary font-bold mb-4">Add New Task</h3>
