--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,7 @@
-<header class="z-40 mt-16 lg:mt-0 lg:ml-12 lg:w-[95%] xl:w-full xl:ml-0 items-center w-full bg-white shadow-lg dark:bg-gray-700 rounded-xl lg:h-[70px]">
+<!-- Tasks Header Component (Includes Filter, Sort, and Add Task Button) -->
+
+<header
+  class="z-40 mt-16 lg:mt-0 lg:ml-12 lg:w-[95%] xl:w-full xl:ml-0 items-center w-full bg-white shadow-lg dark:bg-gray-700 rounded-xl lg:h-[70px]">
   <div class="relative flex items-center justify-between h-full px-3 mx-auto flex-center">
     <!-- Toggle button for sm -->
     <button (click)="isHeaderOpen = !isHeaderOpen"
@@ -11,6 +14,7 @@
 
     <div [ngClass]="{'block': isHeaderOpen, 'hidden': !isHeaderOpen, 'lg:flex': true }"
       class="relative flex flex-col lg:flex-row items-center w-full pl-1 lg:max-w-68 sm:pr-2 sm:ml-0 gap-4 lg:justify-between">
+      <!-- Filter -->
       <div class="flex flex-col sm:flex-row gap-4 w-full items-center pt-4 lg:pt-0">
         <div class="flex gap-1 items-center">
           <svg width="20px" height="20px" viewBox="-0.5 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg"
@@ -180,7 +184,7 @@
         </div>
       </div>
 
-      <!-- Sort By Row -->
+      <!-- Sort By -->
       <div class="w-full">
         <div class="relative mt-1">
           <button type="button" (click)="sortToggle = !sortToggle"
@@ -280,7 +284,7 @@
         </div>
       </div>
 
-      <!-- Add Task Button Row -->
+      <!-- Add Task Button -->
       <div class="w-full flex lg:justify-end justify-center pb-4 lg:pb-0">
         <button (click)="showAddTaskModal=true"
           class="flex items-center border border-secondary text-secondary dark:border-primary dark:text-primary font-bold py-2 px-4 rounded shadow-md hover:bg-secondary hover:text-white dark:hover:bg-secondary dark:hover:text-white dark:hover:border-secondary transition-colors">
